stopgap

--- a/src/styles/includeInAll/all/tags.scss
+++ b/src/styles/includeInAll/all/tags.scss
@@ -2,7 +2,7 @@
 
 html {
   // font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1.1em;
+  font-size: 1em;
 }
 
 body {
@@ -16,7 +16,7 @@ h1 {
 }
 p {
   margin-top: 1.8em;
-  font-size: 0.9em;
+  font-size: 1em;
 }
 h2 {
   font-weight: bold;
