--- a/src/styles/resumePage.scss
+++ b/src/styles/resumePage.scss
@@ -1,1 +1,8 @@
 @import './standard/general.scss';
+
+.resumePage {
+  &__h2 {
+    padding: 0;
+    margin: 1em 0 0 0;
+  }
+}
