--- a/src/styles/standard/general.scss
+++ b/src/styles/standard/general.scss
@@ -4,14 +4,38 @@
   h1 {
     margin: 1em 0 0.2em 0;
   }
+  h2 {
+    font-size: 1.4rem;
+  }
+  h3 {
+    font-size: 1.3rem;
+  }
+  h4 {
+    font-size: 1.2rem;
+    line-height: 1.7rem;
+    margin: 1.7rem 0 0.9rem 0;
+    padding: 0;
+  }
   hr {
     margin: 0;
   }
   p {
-    font-size: 1em;
+    font-size: 1rem;
+    margin: 0.9rem 0;
+  }
+  li {
+    font-size: 1rem;
+    line-height: 1.4rem;
   }
 }
 
+a.link {
+  color: #065d9c;
+  :hover {
+    color: #065d9c;
+    text-decoration: underline;
+  }
+}
 .boxesBkLeft {
   min-height: 400px;
   background-size: 500px;
